2009-05-31  David A. Capello  <davidcapello@gmail.com>

	* src/file/file.cpp (fop_free): Fixed a mutex-handle leak.

	* src/raster/undo.cpp (update_undo): Fixed a bug where
	the current open-undo-chunk were discarded if the undo-limit
	were reached.

	* src/core/job.cpp: Added Job class to do background jobs more easily.

2009-05-30  David A. Capello  <davidcapello@gmail.com>

	* src/raster/image_impl.h (ImageImpl): Changed the implementation of
	images with templates.

2009-05-20  David A. Capello  <davidcapello@gmail.com>

	* src/commands/cmd_sprite_size.cpp (cmd_sprite_size_execute): Implemented
	feature #2671468: Resize a sprite.

2009-05-17  David A. Capello  <davidcapello@gmail.com>

	* src/commands/cmd_canvas_size.cpp (cmd_canvas_size_execute):
	Added command to change the canvas size.

2009-03-08  David A. Capello  <davidcapello@gmail.com>

	* src/modules/tools.cpp: Now tiled mode can be specified by X
	and/or Y axis (Scott Wilson idea, feature #2636076).

2009-03-07  David A. Capello  <davidcapello@gmail.com>

	* src/util/clipboard_win32.h: Added support to copy & paste
	to/from the Windows Clipboard (feature #2577954).

2009-03-02  David A. Capello  <davidcapello@gmail.com>

	* src/dialogs/filesel.cpp (ase_file_selector): Fixed a bug
	when the user presses ENTER with an empty file name.

2009-03-01  David A. Capello  <davidcapello@gmail.com>

	* src/widgets/editor/cursor.cpp (editor_clean_cursor): Fixed a
	problem where old_clipping_region can be NULL if multiple editors
	are in use and PASTE command is executed.

2009-02-25  David A. Capello  <davidcapello@gmail.com>

	* src/commands/cmd_save_file.cpp (cmd_save_file_copy_as_execute):
	Added "Save Copy As" command (Scott Wilson idea, feature #2636076).

2009-02-21  David A. Capello  <davidcapello@gmail.com>

	* Fixed some compilation errors in gcc 64 bits (reported by Scott Wilson).

2009-01-24  David A. Capello  <davidcapello@gmail.com>

	* Version 0.6.1 released.
